# gcm

./: .editorconfig  .gitignore  a.out  compile_commands.json  cop.c  electron.vite.config.ts  eslint.config.mts  file.c  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.cpp  tsconfig.json
native/: .clang-format  CMakeLists.txt  Cargo.toml
native/src/: Atoms.cpp  Atoms.hpp  IHasJsObj.cpp  IHasJsObj.hpp  clipboard.cpp  clipboard.hpp  lib.rs  main.cpp  util.hpp
native/src/clipboard/: mod.rs  thread.rs  types.rs
native/src/clipboard/watcher/: mod.rs  wayland.rs  x11.rs
patches/: canvas.patch  fflate.patch
scripts/: copyNativeBuild.mjs
src/electron/: .gitignore  ClipboardHistory.ts  WindowState.ts  dev.ts  gcmNative.node  gcmNative.node.d.ts  ipc.ts  main.ts  nativeModule.d.ts
src/electron/db/: schema.ts
src/electron/tray/: systemTray.ts
src/electron/tray/items/: QuitAppItem.ts  ShowHideWindowItem.ts  TrayItem.ts
src/electron/util/: constants.ts  crx2Zip.ts  fs.ts
src/preload/: preload.ts
src/renderer/: App.tsx  index.css  index.html  main.tsx
